# snrlab-microfab-trial0

./: .gitignore  EpoxyStudy.ipynb  README.md
analysis/: GPStraj.ipynb
c_cpp/: Doxyfile  README.md
c_cpp/src/: CMakeLists.txt  CMakeOverrides.txt  Makefile  common.h  main.cpp  main.hpp
dev_journal/: ALD_Diamond_202603_a.md  ALD_Diamond_2026_a.md  ALD_NiO_202603_b.md  Cu2O_validation_202606_a.md  Cu_Cu2O_CuO_202607_a.md  README.md  g_task_deadline_2025_a.md  gumaro_20251113_b.md  gumaro_202511_a.md  name_202505_b.ipynb
doc/: DissertationWork.md  Filmphotomaskprocedure.md  InterposerPhotomask.md  InterposerPhotomask.v2.md  Ipmaskfab.md  Laserprintmaterials.md  PCBDesign.md  PPInterposerPhotomask.md  ProjectPlans.md  ProjectPlansInterposerPhotomask.md  QPixInformation  Work Plan.docx  ZebraConnectorType.md  ZebraConnectorandPCB.md  ZebraConnectorsSpongeeBay.md
doc/ACF/: AnisotropicConductiveFilm.md
doc/ALD/: Actionable ALD Plan.md  Journal.md  electroniccontrolsystemvalves.md
doc/C-Vmeasurement/: README.md
doc/CCD/: ALDBuild.md  CCD.ipynb  Do full research on CCD fabrication.md  Fabrication.md  FabricationPlan.md  GIRAv3.md  High-resistivity silicon.md  LArCCD.md  Standard CCD Fabrication Sequence.md  can you find publications on the sequence for fabr.md  on high-resistivity silicon substrates (10,000–12,.md
doc/Elastomeric Connecters/: Purchase.md  TypesofConnectorsandPurchase.md
ic/: .magicrc  README.md  xschemrc
unix/: .Xdefaults  .gitconfig  .inputrc  .pythonrc.py  .rootlogon.C  .rootrc  .rootstyle.C  .screenrc  .vimrc  README.md
(+220 files in other folders)
